feat: project refactor